Use Stream.toList API (mcp-9zw)